fixed grid-item1 and grid-item2 position. Working on email input and submit button, will work on mobile next

--- a/style/style.less
+++ b/style/style.less
@@ -37,9 +37,10 @@ body {
 .left {
   display: flex;
   flex-direction: column;
+  width: 60%;
   justify-content: space-between;
-  align-items: center;
-  height: 50vh;
+  padding: 8% 0% 0% 20%;
+  gap: 10rem;
 }
 
 #grid-item1 {
@@ -49,25 +50,84 @@ body {
 h1 {
   margin: 0;
   color: @saturated-red;
+  font-family: @font-familly;
+  font-weight: 100;
+  font-size: 3.8rem;
+  letter-spacing: 10px;
 }
 
 h2 {
   margin: 0;
   color: @dark-gray-red;
+  font-family: @font-familly;
+  font-weight: 600;
+  font-size: 3.5rem;
+  letter-spacing: 10px;
+  line-height: 4rem;
 }
 
 #grid-item2 {
   grid-area: 2 / 1 / span 2 / span 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 p {
   font-family: @font-familly;
   color: @saturated-red;
+  line-height: 1.6rem;
+  padding: .6rem 0rem;
 }
 
 #grid-item3 {
   grid-area: 1 / 3 / span 3 / span 2;
+}
+
+/* Email Input */
+
+
+.form-group {
+  position: relative;
+  display: flex;
+  width: 100%;
+  & > span,
+  .form-field {
+      white-space: nowrap;
+      display: block;
+      &:not(:first-child):not(:last-child) {
+          border-radius: 0;
+      }
+      &:first-child {
+          border-radius: 6px 0 0 6px;
+      }
+      &:last-child {
+          border-radius: 0 6px 6px 0;
+      }
+      &:not(:first-child) {
+          margin-left: -1px;
+      }
+  }
+  .form-field {
+      position: relative;
+      z-index: 1;
+      flex: 1 1 auto;
+      width: 1%;
+      margin-top: 0;
+      margin-bottom: 0;
+  }
+  & > span {
+      text-align: center;
+      padding: 8px 12px;
+      font-size: 14px;
+      line-height: 25px;
+      color: var(--group-color);
+      background: @saturated-red;
+      border: 1px solid var(--group-border);
+      transition: background .3s ease, border .3s ease, color .3s ease;
+  }
+  &:focus-within {
+      & > span {
+          color: var(--group-color-focus);
+          background: var(--group-background-focus);
+          border-color: var(--group-border-focus);
+      }
+  }
 }
